# baton-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  RELEASING.md  SESSIONS.md  build.rs  wrapper.h
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml
.github/scripts/: extendo-pin  partisan-pin  test-extendo.sh  test-partisan.sh
.github/workflows/: _irods-test.yml  cargo-audit.yml  extendo-tests.yml  partisan-tests.yml  publish.yml  unit-tests.yml
docker/: Dockerfile  build-release.sh  build.sh
shim/: ffi_shim.c  ffi_shim.h
src/: connection.rs  error.rs  ffi.rs  lib.rs  types.rs  version.rs
src/operations/: baton_do.rs  checksum.rs  chmod.rs  get.rs  list.rs  metamod.rs  metaquery.rs  mkdir.rs  mod.rs  mv.rs  put.rs  rm.rs  rmdir.rs
tests/: auth.rs  baton_do_binary.rs  baton_do_dispatch.rs  baton_get_binary.rs  checksum.rs  chmod.rs  compat_baton.rs  connection.rs  error.rs  get.rs  list.rs  metamod.rs  metaquery.rs  mkdir.rs  mv.rs  placeholder.rs  put.rs  reconnect.rs  rm.rs  rmdir.rs
