[package]
name    = "baton-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"

[dependencies]
anyhow             = "1"
base64             = "0.22"
clap               = { version = "4", features = ["derive"] }
md5                = "0.7"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
thiserror          = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cc = "1"
