[package]
name    = "baton-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"

[dependencies]
anyhow             = "1"
clap               = { version = "4", features = ["derive"] }
md5                = "0.8"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
thiserror          = "2"
# `time` is used to convert iRODS catalog timestamps (Unix epoch
# seconds, zero-padded strings) into ISO 8601 / RFC 3339 on output —
# upstream baton's wire shape and what partisan / extendo expect.
# `default-features = false` drops the optional `formatting` /
# `parsing` features we don't need; we hand-format the small subset
# of ISO 8601 we emit.
time               = { version = "0.3", default-features = false }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cc = "1"
