[package]
name        = "baton-rs"
version     = "1.0.0-alpha.0"
edition     = "2021"
license     = "GPL-2.0"
description = "Rust reimplementation of baton, the iRODS metadata client. Wire-compatible with upstream baton 6.0.0."
repository  = "https://github.com/jmtcsngr/baton-rs"
readme      = "README.md"

[dependencies]
anyhow             = "1"
clap               = { version = "4", features = ["derive"] }
md5                = "0.8"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
# `tempfile` backs the `--save` path's temp-then-rename pattern in
# `operations::get` — write to a hidden sibling, atomic-rename on
# success, auto-cleanup via Drop on any failure. See #65.
tempfile           = "3"
thiserror          = "2"
# `time` is used to convert iRODS catalog timestamps (Unix epoch
# seconds, zero-padded strings) into ISO 8601 / RFC 3339 on output —
# upstream baton's wire shape and what partisan / extendo expect.
# `default-features = false` drops the optional `formatting` /
# `parsing` features we don't need; we hand-format the small subset
# of ISO 8601 we emit.
time               = { version = "0.3", default-features = false }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cc = "1"
